--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 
 <style>
 *{box-sizing:border-box;font-family:Inter,system-ui}
-body{
-  margin:0;height:100vh;background:#f5f7fa;overflow:hidden;
-}
+body{margin:0;height:100vh;background:#f5f7fa;overflow:hidden}
 .bg-shape{position:absolute;width:120%;height:45%;border-radius:0 0 50% 50%}
 .bg-top{background:linear-gradient(135deg,#ff7a00,#ffb347);top:-15%;left:-10%}
 .bg-bottom{background:linear-gradient(135deg,#1e40af,#2563eb);bottom:-20%;right:-15%}
@@ -34,6 +32,7 @@ body{
   font-weight:700;padding-bottom:8px;cursor:pointer;color:#9ca3af;
 }
 .tabs button.active{color:#111827;border-bottom:3px solid #2563eb}
+
 .field{margin-bottom:14px}
 .field label{font-size:13px;color:#6b7280;margin-bottom:6px;display:block}
 .field input{
@@ -41,11 +40,20 @@ body{
   border:1px solid #e5e7eb;font-size:15px;
 }
 .field input:focus{outline:none;border-color:#2563eb}
+
+.terms{
+  display:flex;gap:10px;font-size:12.5px;color:#374151;
+  margin:10px 0 6px;line-height:1.4;
+}
+.terms input{margin-top:3px}
+.terms a{color:#2563eb;text-decoration:none;font-weight:600}
+
 .btn{
-  width:100%;margin-top:8px;padding:14px;border:none;
+  width:100%;margin-top:10px;padding:14px;border:none;
   border-radius:16px;background:#2563eb;color:#fff;
   font-size:16px;font-weight:700;cursor:pointer;
 }
+
 .error{
   margin-top:12px;font-size:13px;color:#dc2626;
   display:none;text-align:center;
@@ -101,6 +109,16 @@ body{
         <label>Senha</label>
         <input type="password" id="regPass">
       </div>
+
+      <!-- TERMO -->
+      <div class="terms">
+        <input type="checkbox" id="aceiteTermos">
+        <div>
+          Declaro que sou maior de 18 anos e concordo com a
+          <a href="#" onclick="alert('Política de Privacidade')">Política de Privacidade</a>.
+        </div>
+      </div>
+
       <button class="btn" onclick="register()">Cadastrar</button>
     </div>
 
@@ -115,22 +133,19 @@ const supabase = supabasejs.createClient(
   "SUPABASE_ANON_KEY"
 );
 
-// sessão
 if(localStorage.getItem("sessionUser")){
   window.location.href="index.html";
 }
 
 // máscaras
 function maskCpf(el){
-  el.value = el.value
-    .replace(/\D/g,'')
+  el.value = el.value.replace(/\D/g,'')
     .replace(/(\d{3})(\d)/,'$1.$2')
     .replace(/(\d{3})(\d)/,'$1.$2')
     .replace(/(\d{3})(\d{1,2})$/,'$1-$2');
 }
 function maskPhone(el){
-  el.value = el.value
-    .replace(/\D/g,'')
+  el.value = el.value.replace(/\D/g,'')
     .replace(/(\d{2})(\d)/,'($1) $2')
     .replace(/(\d{5})(\d{4})$/,'$1-$2');
 }
@@ -146,7 +161,6 @@ function showLogin(){
   registerForm.style.display="none";
   msgErro.style.display="none";
 }
-
 function showRegister(){
   tabRegister.classList.add("active");
   tabLogin.classList.remove("active");
@@ -154,7 +168,6 @@ function showRegister(){
   registerForm.style.display="block";
   msgErro.style.display="none";
 }
-
 function erro(msg){
   msgErro.innerText=msg;
   msgErro.style.display="block";
@@ -187,12 +200,16 @@ async function register(){
   const whatsapp = regWhatsapp.value;
   const email = regEmail.value;
   const senha = regPass.value;
+  const aceitou = aceiteTermos.checked;
 
   if(!nome || !cpf || !whatsapp || !senha){
     return erro("Preencha todos os campos");
   }
 
-  // verifica CPF
+  if(!aceitou){
+    return erro("É obrigatório confirmar que é maior de 18 anos e aceitar os termos");
+  }
+
   const { data:existe } = await supabase
     .from("usuarios")
     .select("id")
@@ -206,7 +223,10 @@ async function register(){
 
   const { error } = await supabase
     .from("usuarios")
-    .insert({ nome, cpf, whatsapp, email, senha });
+    .insert({
+      nome, cpf, whatsapp, email, senha,
+      aceitou_termos:true
+    });
 
   if(error){
     return erro("Erro ao cadastrar");
