--- a/login.html
+++ b/login.html
@@ -2,149 +2,80 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Apostas • Futebol</title>
+<title>Login • Apostas Futebol</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="theme-color" content="#2563eb">
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <style>
 *{box-sizing:border-box;font-family:Inter,system-ui}
-body{
-  margin:0;
-  height:100vh;
-  background:#f5f7fa;
-  overflow:hidden;
+body{margin:0;height:100vh;background:#f5f7fa;overflow:hidden}
+
+/* FUNDO */
+.bg-shape{position:absolute;width:120%;height:55%;border-radius:0 0 50% 50%}
+.bg-top{background:linear-gradient(180deg,#ff9f1c,#ff7a00);top:-25%;left:-10%}
+.bg-bottom{background:#1f4fd8;bottom:0;left:0;width:100%;height:18%;border-radius:0}
+
+/* LAYOUT */
+.container{
+  position:relative;height:100%;
+  display:flex;align-items:center;justify-content:center;padding:20px;
+}
+.card{
+  width:100%;max-width:360px;background:#fff;border-radius:22px;
+  padding:28px 24px 32px;
+  box-shadow:0 20px 50px rgba(0,0,0,.12);
 }
 
-/* HEADER */
-.header{
-  background:#2563eb;
-  color:#fff;
-  padding:16px;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
+/* TABS */
+.tabs{display:flex;margin-bottom:24px}
+.tabs button{
+  flex:1;border:none;background:none;font-size:18px;
+  font-weight:700;padding-bottom:8px;cursor:pointer;color:#9ca3af;
 }
-.header .user{
-  font-weight:600;
-  font-size:14px;
-}
-.header .saldo{
-  background:#1e40af;
-  padding:8px 14px;
-  border-radius:999px;
-  font-weight:700;
-  font-size:14px;
-}
+.tabs button.active{color:#111827;border-bottom:2.5px solid #2563eb}
 
-/* CONTEÚDO */
-.content{
-  height:calc(100vh - 64px);
-  overflow-y:auto;
-  padding:16px;
-}
-
-/* CARD JOGO */
-.game{
-  background:#fff;
-  border-radius:18px;
-  padding:16px;
-  margin-bottom:14px;
-  box-shadow:0 10px 30px rgba(0,0,0,.08);
-}
-.game h4{
-  margin:0 0 10px;
-  font-size:15px;
-}
-.teams{
-  display:flex;
-  justify-content:space-between;
-  margin-bottom:12px;
-  font-weight:600;
-}
-.odds{
-  display:grid;
-  grid-template-columns:repeat(3,1fr);
-  gap:10px;
-}
-.odd{
-  background:#eef4ff;
-  border-radius:14px;
-  padding:10px;
-  text-align:center;
-  cursor:pointer;
-  font-weight:700;
-}
-.odd:hover{
-  background:#e0eaff;
-}
-
-/* BOTÃO SAIR */
-.logout{
-  position:fixed;
-  bottom:18px;
-  right:18px;
-  background:#dc2626;
-  color:#fff;
-  border:none;
-  border-radius:999px;
-  padding:14px 18px;
-  font-weight:700;
-  cursor:pointer;
-  box-shadow:0 10px 25px rgba(0,0,0,.2);
-}
-
-/* MODAL */
-.modal{
-  position:fixed;
-  inset:0;
-  background:rgba(0,0,0,.4);
-  display:none;
-  align-items:center;
-  justify-content:center;
-  z-index:999;
-}
-.modal-card{
-  background:#fff;
-  width:90%;
-  max-width:320px;
-  border-radius:18px;
-  padding:20px;
-}
-.modal-card h3{
-  margin-top:0;
-}
-.modal-card input{
+/* CAMPOS */
+.field{margin-bottom:14px}
+.field label{font-size:13px;color:#6b7280;margin-bottom:6px;display:block}
+.field input{
   width:100%;
-  padding:12px;
-  border-radius:14px;
-  border:none;
-  background:#eef4ff;
-  margin-bottom:12px;
-  font-size:15px;
-}
-.modal-card button{
-  width:100%;
-  padding:14px;
-  border:none;
+  padding:14px 16px;
   border-radius:16px;
-  background:#2563eb;
-  color:#fff;
-  font-weight:700;
-  cursor:pointer;
+  border:none;
+  background:#eef4ff;
+  font-size:15px;
+}
+.field input:focus{outline:none;background:#e7efff}
+
+/* TERMOS */
+.terms{
+  display:flex;gap:10px;font-size:12.5px;color:#374151;
+  margin:10px 0 6px;line-height:1.4;
+}
+
+/* BOTÃO */
+.btn{
+  width:100%;margin-top:10px;padding:14px;border:none;
+  border-radius:16px;background:#2563eb;color:#fff;
+  font-size:16px;font-weight:700;cursor:pointer;
+}
+
+/* ERRO */
+.error{
+  margin-top:12px;font-size:13px;color:#dc2626;
+  display:none;text-align:center;
 }
 
 /* OVERLAY */
 .overlay{
-  position:fixed;
-  inset:0;
-  background:rgba(255,255,255,.8);
-  display:none;
-  align-items:center;
-  justify-content:center;
-  z-index:1000;
+  position:fixed;inset:0;
+  background:rgba(255,255,255,.85);
+  display:none;align-items:center;justify-content:center;
+  z-index:999;
 }
 .loader{
   width:42px;height:42px;
@@ -159,90 +90,204 @@ body{
 
 <body>
 
+<div class="bg-shape bg-top"></div>
+<div class="bg-shape bg-bottom"></div>
+
 <div class="overlay" id="overlay">
   <div class="loader"></div>
 </div>
 
-<div class="header">
-  <div class="user" id="userNome"></div>
-  <div class="saldo">Saldo: R$ <span id="saldo">100,00</span></div>
-</div>
+<div class="container">
+  <div class="card">
 
-<div class="content">
-
-  <!-- JOGO -->
-  <div class="game">
-    <h4>Hoje • 21:30</h4>
-    <div class="teams">
-      <span>Flamengo</span>
-      <span>Palmeiras</span>
+    <div class="tabs">
+      <button id="tabLogin" class="active" type="button">Login</button>
+      <button id="tabRegister" type="button">Cadastro</button>
     </div>
-    <div class="odds">
-      <div class="odd" onclick="apostar('Flamengo','2.10')">2.10</div>
-      <div class="odd" onclick="apostar('Empate','3.20')">3.20</div>
-      <div class="odd" onclick="apostar('Palmeiras','2.80')">2.80</div>
+
+    <!-- LOGIN -->
+    <div id="loginForm">
+      <div class="field">
+        <label>CPF</label>
+        <input id="loginCpf" inputmode="numeric" placeholder="000.000.000-00">
+      </div>
+      <div class="field">
+        <label>Senha</label>
+        <input type="password" id="loginPass">
+      </div>
+      <button class="btn" onclick="login()">Entrar</button>
     </div>
-  </div>
 
-  <div class="game">
-    <h4>Amanhã • 19:00</h4>
-    <div class="teams">
-      <span>Grêmio</span>
-      <span>Inter</span>
+    <!-- CADASTRO -->
+    <div id="registerForm" style="display:none">
+      <div class="field">
+        <label>Nome</label>
+        <input id="regNome">
+      </div>
+      <div class="field">
+        <label>CPF</label>
+        <input id="regCpf" inputmode="numeric" placeholder="000.000.000-00">
+      </div>
+      <div class="field">
+        <label>WhatsApp</label>
+        <input id="regWhatsapp" inputmode="numeric" placeholder="(00) 00000-0000">
+      </div>
+      <div class="field">
+        <label>Email</label>
+        <input id="regEmail">
+      </div>
+      <div class="field">
+        <label>Senha</label>
+        <input type="password" id="regPass">
+      </div>
+
+      <div class="terms">
+        <input type="checkbox" id="aceiteTermos">
+        <div>Sou maior de 18 anos e aceito a Política de Privacidade.</div>
+      </div>
+
+      <button class="btn" onclick="register()">Cadastrar</button>
     </div>
-    <div class="odds">
-      <div class="odd" onclick="apostar('Grêmio','2.40')">2.40</div>
-      <div class="odd" onclick="apostar('Empate','3.10')">3.10</div>
-      <div class="odd" onclick="apostar('Inter','2.60')">2.60</div>
-    </div>
-  </div>
 
-</div>
+    <div class="error" id="msgErro"></div>
 
-<button class="logout" onclick="logout()">Sair</button>
-
-<!-- MODAL -->
-<div class="modal" id="modal">
-  <div class="modal-card">
-    <h3 id="modalTitulo"></h3>
-    <input id="valorAposta" placeholder="Valor da aposta">
-    <button onclick="confirmarAposta()">Confirmar Aposta</button>
   </div>
 </div>
 
 <script>
-// PROTEÇÃO
-const user = localStorage.getItem("sessionUser");
-if(!user){
-  window.location.href="login.html";
-}
-const usuario = JSON.parse(user);
-document.getElementById("userNome").innerText = usuario.nome;
+const supabase = supabasejs.createClient(
+  "https://qvlfuqxqxcgfjxkmtyyy.supabase.co",
+  "sb_publishable_w5vrkvi_8rUGP3_vwofSIg_TD8XISuJ"
+);
 
-// APOSTA
-let apostaAtual = null;
-function apostar(time, odd){
-  apostaAtual = { time, odd };
-  document.getElementById("modalTitulo").innerText =
-    `Apostar em ${time} (odd ${odd})`;
-  document.getElementById("modal").style.display="flex";
+const overlay = document.getElementById("overlay");
+const msgErro = document.getElementById("msgErro");
+
+// sessão
+if(localStorage.getItem("sessionUser")){
+  location.href="index.html";
 }
 
-function confirmarAposta(){
-  document.getElementById("modal").style.display="none";
-  document.getElementById("overlay").style.display="flex";
+/* TABS */
+tabLogin.onclick = showLogin;
+tabRegister.onclick = showRegister;
 
-  setTimeout(()=>{
-    document.getElementById("overlay").style.display="none";
-    alert("Aposta registrada com sucesso!");
-  },1200);
+function showLogin(){
+  tabLogin.classList.add("active");
+  tabRegister.classList.remove("active");
+  loginForm.style.display="block";
+  registerForm.style.display="none";
+  msgErro.style.display="none";
+}
+function showRegister(){
+  tabRegister.classList.add("active");
+  tabLogin.classList.remove("active");
+  loginForm.style.display="none";
+  registerForm.style.display="block";
+  msgErro.style.display="none";
+}
+function erro(msg){
+  msgErro.innerText = msg;
+  msgErro.style.display = "block";
 }
 
-// SAIR
-function logout(){
-  if(confirm("Deseja sair do aplicativo?")){
-    localStorage.removeItem("sessionUser");
-    window.location.href="login.html";
+/* MÁSCARAS */
+function maskCpf(el){
+  el.value = el.value.replace(/\D/g,'').slice(0,11)
+    .replace(/(\d{3})(\d)/,'$1.$2')
+    .replace(/(\d{3})(\d)/,'$1.$2')
+    .replace(/(\d{3})(\d{1,2})$/,'$1-$2');
+}
+function maskPhone(el){
+  el.value = el.value.replace(/\D/g,'').slice(0,11)
+    .replace(/(\d{2})(\d)/,'($1) $2')
+    .replace(/(\d{5})(\d{4})$/,'$1-$2');
+}
+
+loginCpf.addEventListener("input", onLoginCpf);
+regCpf.addEventListener("input", ()=>maskCpf(regCpf));
+regWhatsapp.addEventListener("input", ()=>maskPhone(regWhatsapp));
+
+/* VERIFICA CPF LOGIN */
+async function onLoginCpf(){
+  maskCpf(loginCpf);
+  const cpf = loginCpf.value.replace(/\D/g,'');
+  if(cpf.length !== 11) return;
+
+  overlay.style.display="flex";
+  try{
+    const { data } = await supabase
+      .from("usuarios")
+      .select("id")
+      .eq("cpf", loginCpf.value)
+      .single();
+
+    overlay.style.display="none";
+
+    if(!data){
+      showRegister();
+      regCpf.value = loginCpf.value;
+      erro("CPF não encontrado. Faça o cadastro.");
+    }
+  }catch{
+    overlay.style.display="none";
+    erro("Erro de conexão com o servidor.");
+  }
+}
+
+/* LOGIN */
+async function login(){
+  overlay.style.display="flex";
+  try{
+    const { data, error } = await supabase
+      .from("usuarios")
+      .select("*")
+      .eq("cpf",loginCpf.value)
+      .eq("senha",loginPass.value)
+      .single();
+
+    overlay.style.display="none";
+
+    if(error || !data){
+      return erro("CPF ou senha inválidos");
+    }
+
+    localStorage.setItem("sessionUser", JSON.stringify(data));
+    location.href="index.html";
+  }catch{
+    overlay.style.display="none";
+    erro("Erro de conexão com o servidor");
+  }
+}
+
+/* CADASTRO */
+async function register(){
+  if(!aceiteTermos.checked){
+    return erro("É obrigatório aceitar os termos");
+  }
+
+  overlay.style.display="flex";
+  try{
+    const { error } = await supabase.from("usuarios").insert({
+      nome:regNome.value,
+      cpf:regCpf.value,
+      whatsapp:regWhatsapp.value,
+      email:regEmail.value,
+      senha:regPass.value,
+      aceitou_termos:true
+    });
+
+    overlay.style.display="none";
+
+    if(error){
+      return erro("Erro ao cadastrar usuário");
+    }
+
+    showLogin();
+    erro("Cadastro realizado. Faça login.");
+  }catch{
+    overlay.style.display="none";
+    erro("Erro de conexão com o servidor");
   }
 }
 </script>
